# migalley

./: .gitignore  CMakeLists.txt  README.md
3D/: 3D.vcxproj  3D.vcxproj.filters  3DCODE.CPP  3DCOM.CPP  ANMRADIO.CPP  BTREE.CPP  CMakeLists.txt  COLLIDED.CPP  DECOMP.CPP  IMAGEMAP.CPP  JIMCOL.CPP  JIMTRI.CPP  LANDSCAP.CPP  LSTREAM.CPP  MIGLAND.CPP  MONOTXT.CPP  OVERLAY.CPP  PARTICLE.CPP  SHAPES.CPP  SHPBLD.CPP  TILEMAKE.CPP  TRANSITE.CPP  VIEWSEL.CPP  WEAPPAK.CPP  WORLD.CPP
AI/: AAA.CPP  AI.vcxproj  AI.vcxproj.filters  CMakeLists.txt  MSGAI.CPP  SPOTTED.CPP  USERMSG.CPP
AIRCRAFT/: AI_F51D.CPP  AI_F80C.CPP  AI_F84E.CPP  AI_F86E.CPP  AI_MIG15.CPP  AI_YAK9.CPP  Aircraft.vcxproj  Aircraft.vcxproj.filters  CD_COMM.CPP  CD_F51D.CPP  CD_F80C.CPP  CD_F84E.CPP  CD_F86E.CPP  CD_MIG15.CPP  CD_YAK9.CPP  CMakeLists.txt  DT_F51D.CPP  DT_F80C.CPP  DT_F84E.CPP  DT_F86E.CPP  DT_MIG15.CPP  DT_OTHER.CPP  DT_YAK9.CPP
Assembler/: Assembler.vcxproj  Assembler.vcxproj.filters  CMakeLists.txt  stub_empty.cpp
Bfields/: Bfields.vcxproj  Bfields.vcxproj.filters  CMakeLists.txt  GLOBREFS.CPP  MAKEBF.CXX  MAPCODE.CPP  MESSAGES.CPP  PERSONS2.CPP  PERSONS3.CPP  PERSONS4.CPP  PERSONS7.CPP  QMISS.CPP  SAVEBIN.CPP  TANK.CPP
CollisionsEtAl/: 000TOOLS.CPP  CMakeLists.txt  CollisionsEtAl.vcxproj  CollisionsEtAl.vcxproj.filters
Comms/: AGGRGTOR.CPP  CMakeLists.txt  COMMS.CPP  Comms.vcxproj  Comms.vcxproj.filters  REPLAY.CPP  WINMOVE.CPP
Files/: CMakeLists.txt  FILEMAN.CPP  Files.vcxproj  Files.vcxproj.filters  LOADLIST.CPP  WINFILE.CPP
GENERAL/: CMakeLists.txt  General.vcxproj  General.vcxproj.filters  MALLOC.CPP  MigCstring.cpp  STATIC.CPP  WINERROR.CPP  _GENE.CPP
Graphics/: CMakeLists.txt  GRAFPRIM.CPP  Graphics.vcxproj  Graphics.vcxproj.filters  LBM.CPP  POLYGON.CPP  TGA.CPP  WINSMACK.CPP  WRAPPER.CPP
H/: 3DCODE.H  3DDEFS.H  ANALOGUE.H  BASES.H  BASEST.H  BATNODE.H  BITCOUNT.H  BOXCOL.H  BRIEFING.H  BSTREAM.H  CAMPBACK.H  CAMPWAR.H  CAREER.H  CHSQUAD.H  CNTRITEM.H  COLLIDED.H  CONFIG.H  CPolyTree.h  DLGITEM.H  DOSDEFS.H  DPLOBBY.H  ELMT.H  ENGINE.H  FILEMAN.H  FILES.H  FLYINIT.H  FORMS.H  FRAG.H  FULLPANE.H  GAMESET.H  GEAR.H  GLOBDEFS.H  GROUPITT.H  HARDPASM.H  HINTBOX.H  IMAGEMAP.H  Inst3d.h  KEYMAPS.H  KEYTEST.H  LANDSCAP.H  (+156 more)
Hardware/: CMakeLists.txt  CONFIG.CPP  DDRWINIT.CPP  HARDPUB.CPP  HARDWIN.CPP  Hardware.vcxproj  Hardware.vcxproj.filters  MESSENGN.CPP  MILES.CPP  RCHATTER.CPP  SFONTS.CPP  WIN3D.CPP  XX_ScreenFlip_Vulkan.cpp  XX_ScreenFlip_Vulkan.h  dinput_stub.cpp  direct_3d.cpp  shader_mig_window.frag  shader_mig_window.frag.spv  shader_mig_window.frag.txt  shader_mig_window.vert
Includes/: 3DCOM.H  3DDEFS.H  3DINSTR.H  AAA.H  ACMMODEL.H  AC_VIEW.H  AERODEV.H  AGGRGTOR.H  AI.H  ANALOGUE.H  APILOT.H  BASES.H  BATNODE.H  BFCOMMON.H  BFNUMBER.H  BITFIELD.H  BITFTMP.H  BRIEFING.H  BTREE.H  CBUFFER.H  COMMS.H  CSTRING.H  CTIMEOUT.H  CTRL.H  CURVES.H  DAMAGE.H  DBRFTLBR.H  DEBRIEF.H  DISPLAY.H  FILEMAN.H  FLYMODEL.H  FONTS.H  FRAG.H  FRAGPILT.H  FULLPANE.H  GAMESET.H  GETSET.H  GRAFPRIM.H  HDATA.H  ICON.H  (+100 more)
Input/: ANALOGUE.CPP  CMakeLists.txt  Input.vcxproj  Input.vcxproj.filters  KEYTESTS.CPP  keystub.cpp
MFC/: AC_VIEW.CPP  AC_VIEW.H  APILOT.CPP  APILOT.H  ARMY.CPP  ARMY.H  ARMYDETL.CPP  ARMYDETL.H  ARMYRQST.CPP  ARMYRQST.H  ARMY_DOS.CPP  ARMY_DOS.H  AUTHOR.CPP  AUTHOR.H  BASES.CPP  BASES.H  BASEST.CPP  BASEST.H  BATTDETL.CPP  BATTDETL.H  CAMPBACK.CPP  CAMPBACK.H  CAMPLIST.CPP  CAMPLIST.H  CAMPWAR.H  CAREER.H  CHOKE.CPP  CHOKE.H  CHSQUAD.CPP  CHSQUAD.H  CMBTVIEW.CPP  CMBTVIEW.H  CMakeLists.txt  COMIT_E.CPP  COMIT_E.H  COMMSAC.CPP  COMMSAC.H  COMMSPNT.CPP  COMMSPNT.H  CREDITS.CPP  (+227 more)
Math/: CMakeLists.txt  MATH.CPP  MATRIX.CPP  Math.vcxproj  Math.vcxproj.filters
MigAlley/: CMakeLists.txt  Comit_e.cpp  DAMAGE.H  Damage.cpp  FRAG.CPP  FULLPANE.H  Fullpane.cpp  GeneratedResources.cpp  GeneratedResources.h  MIG.RC  MIG.pp.rc  MRESULT.CPP  MRESULT.H  MigAlley.cpp  MigAlley.h  MigAlley.vcxproj  MigAlley.vcxproj.filters  MigCString.cpp  ReadMe.txt  Resource_disabled.h  SDETAIL.H  Sdetail.cpp  WEAPONS.CPP  WEAPONS.H  WinMig3D.CPP  stdafx.cpp  stdafx.h
Missman/: CMakeLists.txt  DEBRIEF.CPP  FORMATN.CPP  MISSINIT.CPP  Missman.vcxproj  Missman.vcxproj.filters  NODE.CPP  NODEREV.CPP  PACKAGES.CPP  SAVEGAME.CPP
Model/: ACMAI.CPP  ACMMAN.CPP  ACMMODEL.CPP  ACMSIMPL.CPP  AERODEV.CPP  CDAT.CPP  CMakeLists.txt  CTRL.CPP  CURVES.CPP  ELMT.CPP  ENGINE.CPP  GEAR.CPP  MODEL.CPP  MODINT.CPP  MODVEC.CPP  Model.vcxproj  Model.vcxproj.filters  SKY.CPP
Movecode/: AUTOMOVE.CPP  CMakeLists.txt  FLYINIT.CPP  FLYMODEL.CPP  KEYFLY.CPP  MOVEALL.CPP  Movecode.vcxproj  Movecode.vcxproj.filters  WPACTION.CPP
Overlay/: CMakeLists.txt  Overlay.vcxproj  Overlay.vcxproj.filters
Sheets/: DAMAGE_NHV.CPP  Sheets.vcxproj
UI/: CMakeLists.txt  MiniUI.cpp  MiniUI.h  QuickMissionUI.cpp  QuickMissionUI.h  menu_workflow.txt  uid_reverse.cpp
scripts/: MIG.RC  MIG_RC.json  rc_to_json.py
